added some words

--- a/INDEX 1.html
+++ b/INDEX 1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
     <HEAD>
-        <title>LAYOUT 3</title>
+        <title>LAYOUT 3 </title>
         <LINK rel="STYLESHEET" href="CSS/STYLE .css">
             <script src="https://kit.fontawesome.com/78128cf9f9.js" crossorigin="anonymous"></script>
     </HEAD>
@@ -24,7 +24,7 @@
     
         <img class="img1" src="IMG/grilled-meat-skewers-chicken-shish-kebab-with-zucchini-tomatoes-red-onions.jpg">
         <div class="text1">
-        <h1 style="font-size: 150px;font-weight: bolder;margin-bottom: 0px;">Foodies</h1>
+        <h1 style="font-size: 150px;font-weight: bolder;margin-bottom: 0px;">Foodies We Are</h1>
         <h1 style="opacity: 0.7; margin-top: 30px;font-size: 40px;">Eat Fresh and Stay Healthy Forever</h1>
         <button class="button2">ORDER NOW</button>
         </div>
